fix text-align

--- a/css/main.css
+++ b/css/main.css
@@ -288,6 +288,7 @@ nav {
   align-items: center;
   width: 100%;
   justify-content: center;
+  text-align: center;
 }
 
 .navBar li {
