--- a/css/media.css
+++ b/css/media.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    text-align: left;
   }
 
   .menuButton {
